Updated frontend, backend and deployment fixes

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=4000
 MONGO_URI="mongodb+srv://vibe_user:VZhKk19B5pJWcRIR@cluster0.p3csel7.mongodb.net/?appName=Cluster0"
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=swqqribnzkksrpvu
+EMAIL_USER=skbonde05@gmail.com
+EMAIL_PASS=wvkaotcvwthqrulh
